# SIPWebAI

./: README.md  package-lock.json
api/: pyproject.toml
api/data/test/: tarefas.json
api/data/train/: alertasAuto.json  tarefaAuto.json
api/models-ml/: produtividadeAuto.pkl  scaler.pkl
api/models-test/: testes.ipynb
api/train_models/: autoAlertas.py  autoProdutividade.py
backend/: .env  package-lock.json  package.json  server.js
backend/config/: db.js  db.sql  mySQL.txt
backend/controllers/: IA_controlador.js  authController.js  eventController.js  notesController.js  relatorioControlador.js  taskController.js
backend/middlewares/: authMiddleware.js
backend/moduloIA/: IA_servico.js
backend/notificacoes/: agendador.js  lembretesServico.js  notificacoesServico.js
backend/relatorios/: relatorioServico.js
backend/routes/: IA_rotas.js  authRoutes.js  eventRoutes.js  notesRoutes.js  relatorioRotas.js  taskRoutes.js
frontend/src/: App.jsx  index.js  rotas.jsx
frontend/src/ComponenteVisualCentral/: useNotificador.js
ml-api/: README.md  app.py  pyproject.toml
ml-api/data/test/: horarioTest.json  produtividade.json
ml-api/data/train/: horariosAuto.json  performace.json  produtividadeAuto.json  tarefaAuto.json
ml-api/models-ml/: alert_model.pkl  horariosAuto.pkl  produtividadeAuto.pkl  tarefasAuto.pkl
ml-api/train/: autoProdutividade.py  autoTarefas.py  sugestaoH.py
ml-api/train/autotarefa/: autoTarefas.py  dados.json  modelo_priorizacao.pkl  novas_tarefas.json
ml-api/train_models/: autoHorarios.py  autoProdutividade.py  autoTarefas.py
(+40 files in other folders)
