[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["LucasAll-dev <jl012593@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
joblib = "^1.4.2"
waitress = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
